--- a/styles/style-min.css
+++ b/styles/style-min.css
@@ -24,13 +24,20 @@
 /* SEC: Browser Reset */
 
 *{
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
 }
 
+html,body{
+    margin: 0;
+    padding: 0;
+}
+
+html{
+    min-height: 100vh;
+    max-height: 100vh;
+}
+
 body{
-    width: 100vw;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -63,7 +70,9 @@ body{
 
 }
 
-
+.hidden{
+    display: none;
+}
 
 
 .text-conatiner{
