--- a/styles/style-min.css
+++ b/styles/style-min.css
@@ -18,19 +18,15 @@
 
 }
 
-
-
 /* SEC: Browser Reset */
 
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
-html,
-body {
-    margin: 0;
-    padding: 0;
-}
+
 
 html {
     min-height: 100vh;
@@ -56,7 +52,8 @@ body {
     background-color: var(--white);
     padding: 16px 16px 40px 16px;
     border-radius: 20px;
-    box-shadow: 0px 25px 25px rgba(0, 0, 0, 0.0476518)
+    box-shadow: 0px 25px 25px rgba(0, 0, 0, 0.0476518);
+
 }
 
 .qr-code-container {
@@ -65,7 +62,7 @@ body {
     background-image: url('/images/image-qr-code.png');
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
+    background-size: contain;
     /*  background-color: var(--accent-blue); */
     border-radius: 10px;
 
